fixed on mobile

--- a/new design for staging/otherad.css
+++ b/new design for staging/otherad.css
@@ -248,6 +248,7 @@ body {
 }
 
 .transparent-div{
+    display: none;
     height: 20vh;
 }
 
@@ -1165,6 +1166,9 @@ ol.v-story-indicators li.triangle {
 
 @media (min-width: 768px) {
     .main-container.top-jacket-ad {
+        display: block;
+    }
+    .transparent-div{
         display: block;
     }
     .right-box .right-box-sub {
